# obsidian

./: README.md  a.diff  meson.build  meson_options.txt  settings.ini  version.h.in
src/: byteorder.h  commands.c  commands.h  commands_base.c  config.c  config.h  connection.c  connection.h  cpe.c  cpe.h  defs.h  heartbeat.c  heartbeat.h  listener.c  listener.h  main.c  map.c  map.h  mapgen.c  mapgen.h  mapgen_basic.c  mapgen_classic.c  mapgz.c  mapsave.c  md5.c  mem.c  mem.h  mod.c  mod.h  modfunc.c  namelist.c  namelist.h  nbt.c  nbt.h  perlin.c  perlin.h  platform.h  player.c  player.h  rng.c  (+3 more)
src/posix/: posix_err.c  posix_main.c  posix_platform.h
src/win32/: miniclassic.manifest  miniclassic.rc  resource.h  sane_windows.h  win_err.c  win_main.c  win_platform.h
